# woolies-order-analyser

./: .env.dist  .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
api/Woolworths/: bruno.json  orders2.bru  past orders.bru
src/woolies_order_analyser/: app.py
src/woolworths/: app.py
