[tool.poetry]
name = "woolworths"
version = "0.1.0"
description = ""
authors = ["Sean McGrath <sean@mcgrath.net.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
streamlit = "^1.37.0"
pandas = "^2.2.2"
numpy = "^2.0.1"
plotly = "^5.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
