[tool.poetry]
name = "woolies-order-analyser"
version = "1.0.0"
description = "Gain insights into your Woolworths shopping habits"
authors = ["Sean McGrath <sean@mcgrath.net.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
streamlit = "^1.37.0"
pandas = "^2.2.2"
numpy = "^2.0.1"
plotly = "^5.23.0"
pymupdf = "^1.24.9"
ipykernel = "^6.29.5"
openai = "^1.37.1"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
langfuse = "^2.40.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
